Removing more references to _property_name
